feat: add uc mail data

--- a/Windows/Mail/MailSetupWindow.xaml
+++ b/Windows/Mail/MailSetupWindow.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MailCreator.Windows.Mail"
+             xmlns:local="clr-namespace:MailCreator.Windows.Mail" 
+             xmlns:uc="clr-namespace:MailCreator.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
@@ -16,14 +17,11 @@
         <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
         <Label Margin="20,70,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Liste des variables disponible pour rédiger le mail</Label>
-        <StackPanel Orientation="Horizontal" Margin="20,100,20,20" VerticalAlignment="Top" Height="40">
-            <Border x:Name="bdNomMatiere" BorderBrush="Green" Margin="4,4,4,4" BorderThickness="2" Height="auto">
-                <TextBlock Margin="4,4,4,4" VerticalAlignment="Center">$nomMatiere$</TextBlock>
-            </Border>
+        <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" >
+        <StackPanel Orientation="Horizontal" x:Name="spMailData" Margin="20,100,20,20" VerticalAlignment="Top" Height="40">
            
-            
         </StackPanel>
-
+        </ScrollViewer>
         <Label Margin="20,140,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez l'objet du mail</Label>
 
         <RichTextBox Margin="20,170,20,0"  x:Name="tbMailObjet"  Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray">
