--- a/UserControls/ucMailData.xaml
+++ b/UserControls/ucMailData.xaml
@@ -2,7 +2,7 @@
 <UserControl x:Class="MailCreator.UserControls.ucMailData"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Border x:Name="bdNomMatiere" BorderBrush="Green" Margin="4,4,4,4" BorderThickness="2" Height="auto">
+    <Border ToolTipService.InitialShowDelay="100" ToolTipService.ShowDuration="3000" ToolTipService.BetweenShowDelay="1000" ToolTip=""  x:Name="bdNomMatiere" BorderBrush="Green" Margin="4,4,4,4" BorderThickness="2" Height="auto">
         <TextBlock Margin="4,4,4,4" VerticalAlignment="Center" x:Name="tbName">Data</TextBlock>
     </Border>
 </UserControl>
