--- a/Windows/Mail/MailSetupWindow.xaml
+++ b/Windows/Mail/MailSetupWindow.xaml
@@ -6,42 +6,49 @@
              xmlns:local="clr-namespace:MailCreator.Windows.Mail" 
              xmlns:uc="clr-namespace:MailCreator.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="650" d:DesignWidth="800">
     <Grid Background="White">
-        <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
-            <StackPanel Orientation="Horizontal">
-                <Image Source="../../Images/back.png" Width="16" Height="16" />
-            </StackPanel>
-        </Button>
 
         <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
         <Label Margin="20,70,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Liste des variables disponible pour rédiger le mail</Label>
         <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" >
-        <StackPanel Orientation="Horizontal" x:Name="spMailData" Margin="20,100,20,20" VerticalAlignment="Top" Height="40">
-           
-        </StackPanel>
+            <StackPanel Orientation="Horizontal" x:Name="spMailData" Margin="20,100,20,20" VerticalAlignment="Top" Height="40">
+
+            </StackPanel>
         </ScrollViewer>
         <Label Margin="20,140,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez l'objet du mail</Label>
 
         <RichTextBox Margin="20,170,20,0"  x:Name="tbMailObjet"  Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray">
             <FlowDocument Background="Transparent">
-               
+
             </FlowDocument>
         </RichTextBox>
 
 
         <Label Margin="20,220,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
-        <RichTextBox Margin="20,250,20,20" KeyUp="RichTextBox_KeyUp" x:Name="rtbMailBody"  Background="LightGray">
+        <RichTextBox Margin="20,250,20,100" KeyDown="RichTextBox_KeyUp"  x:Name="rtbMailBody"  Background="LightGray">
             <FlowDocument Background="Transparent"  >
                 <Paragraph  Background="Transparent"  >
-                    
+
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
 
 
+        <Button x:Name="btnValider" Width="40" Click="btnValider_Click" Background="Transparent" VerticalAlignment="Bottom" HorizontalAlignment="Center" Height="40" Margin="0,0,0,30">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Images/checked.png" Width="16" Height="16" />
+            </StackPanel>
+        </Button>
+
+
+        <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Images/back.png" Width="16" Height="16" />
+            </StackPanel>
+        </Button>
 
 
 
