--- a/Windows/Mail/MailDraftWindow.xaml
+++ b/Windows/Mail/MailDraftWindow.xaml
@@ -3,10 +3,77 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MailCreator.Windows.Mail"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-            
+
+
+        <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Images/back.png" Width="16" Height="16" />
+            </StackPanel>
+        </Button>
+
+
+        <StackPanel  Margin="10,25,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
+            <Label Content="Gestion des Emails" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
+        </StackPanel>
+
+        <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+
+            <StackPanel Orientation="Vertical" Margin="20,100,20,0" HorizontalAlignment="Left"  >
+
+
+             
+
+
+                <Button x:Name="btnCreer"  Click="btnCreer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,0,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Générer brouillons</Label>
+                        <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
+                    </StackPanel>
+                </Button>
+                
+                <Button x:Name="btnSupprimer"  Click="btnSupprimer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Supprimer</Label>
+                        <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/delete.png" Height="25" />
+                    </StackPanel>
+                </Button>
+
+                <Button x:Name="btnModifier"  Click="btnModifier_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Modifier</Label>
+                        <Image Width="25"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/edit.png"  Height="25" />
+                    </StackPanel>
+                </Button>
+
+                <Button x:Name="btnEnvoyer"  Click="btnEnvoyer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Envoyer !</Label>
+                        <Image Width="25"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/send.png"  Height="25" />
+                    </StackPanel>
+                </Button>
+
+            </StackPanel>
+
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" >
+                <ListView  ItemsSource="{Binding Mails}"  x:Name="lvMails"  Height="275" Width="500" VerticalAlignment="Top" Margin="20,100,20,0">
+
+                    <ListView.View>
+                        <GridView AllowsColumnReorder="true"  x:Name="gvMails" ColumnHeaderToolTip="Matières">
+                            <GridViewColumn x:Name="gvcDestinataire" DisplayMemberBinding="{Binding Destinataire}" Header="Destinataire" Width="120" />
+                            <GridViewColumn x:Name="gvcObjet" DisplayMemberBinding="{Binding Objet}" Header="Objet" Width="280"/>
+                            <GridViewColumn x:Name="gvcBody" DisplayMemberBinding="{Binding Body}" Header="Body" Width="auto"/>
+
+                        </GridView>
+
+                    </ListView.View>
+                </ListView>
+
+            </StackPanel>
+
+        </StackPanel>
+
     </Grid>
 </UserControl>
