--- a/Windows/Mail/MailDraftWindow.xaml
+++ b/Windows/Mail/MailDraftWindow.xaml
@@ -7,6 +7,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
 
+        
+        
 
         <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
             <StackPanel Orientation="Horizontal">
@@ -24,7 +26,8 @@
             <StackPanel Orientation="Vertical" Margin="20,100,20,0" HorizontalAlignment="Left"  >
 
 
-             
+                <ComboBox x:Name="cbAccounts" Width="200"  SelectionChanged="cbAccounts_SelectionChanged" Height="20" Margin="0,0,0,20">
+                </ComboBox>
 
 
                 <Button x:Name="btnCreer"  Click="btnCreer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,0,0,0">
@@ -61,7 +64,7 @@
                 <ListView  ItemsSource="{Binding Mails}"  x:Name="lvMails"  Height="275" Width="500" VerticalAlignment="Top" Margin="20,100,20,0">
 
                     <ListView.View>
-                        <GridView AllowsColumnReorder="true"  x:Name="gvMails" ColumnHeaderToolTip="Matières">
+                        <GridView AllowsColumnReorder="true"  x:Name="gvMails" ColumnHeaderToolTip="Mails">
                             <GridViewColumn x:Name="gvcDestinataire" DisplayMemberBinding="{Binding Destinataire}" Header="Destinataire" Width="120" />
                             <GridViewColumn x:Name="gvcObjet" DisplayMemberBinding="{Binding Objet}" Header="Objet" Width="280"/>
                             <GridViewColumn x:Name="gvcBody" DisplayMemberBinding="{Binding Body}" Header="Body" Width="auto"/>
