--- a/Windows/Mail/MailDraftWindow.xaml
+++ b/Windows/Mail/MailDraftWindow.xaml
@@ -26,7 +26,7 @@
             <StackPanel Orientation="Vertical" Margin="20,100,20,0" HorizontalAlignment="Left"  >
 
 
-                <ComboBox x:Name="cbAccounts" Width="200"  SelectionChanged="cbAccounts_SelectionChanged" Height="20" Margin="0,0,0,20">
+                <ComboBox x:Name="cbAccounts" Width="200"  SelectionChanged="cbAccounts_SelectionChanged" Height="40" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,0,20">
                 </ComboBox>
 
 
