--- a/Windows/Mail/MailDraftWindow.xaml
+++ b/Windows/Mail/MailDraftWindow.xaml
@@ -7,8 +7,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
 
-        
-        
+
+
 
         <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
             <StackPanel Orientation="Horizontal">
@@ -21,9 +21,9 @@
             <Label Content="Gestion des Emails" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
         </StackPanel>
 
-        <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="30,100,30,30" Background="Transparent">
 
-            <StackPanel Orientation="Vertical" Margin="20,100,20,0" HorizontalAlignment="Left"  >
+            <StackPanel Orientation="Vertical" Margin="20,0,20,0" HorizontalAlignment="Left"  >
 
 
                 <ComboBox x:Name="cbAccounts" Width="200"  SelectionChanged="cbAccounts_SelectionChanged" Height="40" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,0,20">
@@ -36,7 +36,7 @@
                         <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
                     </StackPanel>
                 </Button>
-                
+
                 <Button x:Name="btnSupprimer"  Click="btnSupprimer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
                         <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Supprimer</Label>
@@ -60,12 +60,11 @@
 
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" >
-                <ListView  ItemsSource="{Binding Mails}"  x:Name="lvMails"  Height="275" Width="500" VerticalAlignment="Top" Margin="20,100,20,0">
+            <ListView  ItemsSource="{Binding Mails}"  x:Name="lvMails"  Height="275" Width="480" HorizontalContentAlignment="Center" Margin="0,0,20,0" VerticalContentAlignment="Center"  VerticalAlignment="Top" >
 
                     <ListView.View>
                         <GridView AllowsColumnReorder="true"  x:Name="gvMails" ColumnHeaderToolTip="Mails">
-                            <GridViewColumn x:Name="gvcDestinataire" DisplayMemberBinding="{Binding Destinataire}" Header="Destinataire" Width="120" />
+                            <GridViewColumn x:Name="gvcDestinataire" DisplayMemberBinding="{Binding Destinataire}"  Header="Destinataire" Width="120" />
                             <GridViewColumn x:Name="gvcObjet" DisplayMemberBinding="{Binding Objet}" Header="Objet" Width="280"/>
                             <GridViewColumn x:Name="gvcBody" DisplayMemberBinding="{Binding Body}" Header="Body" Width="auto"/>
 
@@ -74,7 +73,6 @@
                     </ListView.View>
                 </ListView>
 
-            </StackPanel>
 
         </StackPanel>
 
