--- a/Windows/Mail/MailSetupWindow.xaml
+++ b/Windows/Mail/MailSetupWindow.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="650" d:DesignWidth="800">
     <Grid Background="White">
 
-        <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
+        <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Modifiez le mail générique</Label>
 
         <Label Margin="20,70,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Liste des variables disponible pour rédiger le mail</Label>
         <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" >
