--- a/Windows/Mail/MailUpdateWindow.xaml
+++ b/Windows/Mail/MailUpdateWindow.xaml
@@ -8,19 +8,36 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
 
+        <Label FontSize="28" FontWeight="SemiBold" x:Name="lbTitle" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" FontFamily="Poppins" >Modifiez le brouillon</Label>
 
-        <Label Margin="20,140,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez l'objet du mail</Label>
 
-        <RichTextBox Margin="20,170,20,0"  x:Name="rtbMailObjet" KeyDown="rtbMailObjet_KeyDown" Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray">
+
+
+        <Button x:Name="btnBack" Width="30" Click="btnBack_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="20,20,0,0">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Images/back.png" Width="16" Height="16" />
+            </StackPanel>
+        </Button>
+
+        <Button x:Name="btnHome" Width="30" Click="btnHome_Click"  Height="30" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="60,20,0,0">
+            <StackPanel Orientation="Horizontal">
+                <Image Source="../../Images/house.png" Width="16" Height="16" />
+            </StackPanel>
+        </Button>
+
+
+        <Label Margin="20,70,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez l'objet du mail</Label>
+
+        <RichTextBox Margin="20,110,20,0"  x:Name="rtbMailObjet" Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray">
             <FlowDocument Background="Transparent">
 
             </FlowDocument>
         </RichTextBox>
 
 
-        <Label Margin="20,220,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
+        <Label Margin="20,160,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
-        <RichTextBox Margin="20,250,20,100" KeyDown="rtbMailBody_KeyDown"  x:Name="rtbMailBody"  Background="LightGray">
+        <RichTextBox Margin="20,200,20,20"   x:Name="rtbMailBody"  Background="LightGray">
             <FlowDocument Background="Transparent"  >
 
             </FlowDocument>
