--- a/Windows/Mail/MailDraftWindow.xaml
+++ b/Windows/Mail/MailDraftWindow.xaml
@@ -26,34 +26,34 @@
             <StackPanel Orientation="Vertical" Margin="20,0,20,0" HorizontalAlignment="Left"  >
 
 
-                <ComboBox x:Name="cbAccounts" Width="200"  SelectionChanged="cbAccounts_SelectionChanged" Height="40" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,0,20">
+                <ComboBox x:Name="cbAccounts" Width="200" FontFamily="Poppins" SelectionChanged="cbAccounts_SelectionChanged" Height="40" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,0,20">
                 </ComboBox>
 
 
                 <Button x:Name="btnCreer"  Click="btnCreer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,0,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Générer brouillons</Label>
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="145">Générer brouillons</Label>
                         <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
                 <Button x:Name="btnSupprimer"  Click="btnSupprimer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Supprimer</Label>
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="145">Supprimer</Label>
                         <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/delete.png" Height="25" />
                     </StackPanel>
                 </Button>
 
                 <Button x:Name="btnModifier"  Click="btnModifier_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Modifier</Label>
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="145">Modifier</Label>
                         <Image Width="25"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/edit.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
                 <Button x:Name="btnEnvoyer"  Click="btnEnvoyer_Click" Width="200"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="135">Envoyer !</Label>
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="145">Envoyer !</Label>
                         <Image Width="25"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/send.png"  Height="25" />
                     </StackPanel>
                 </Button>
