--- a/Windows/Professeurs/ProfesseurWindow.xaml
+++ b/Windows/Professeurs/ProfesseurWindow.xaml
@@ -33,24 +33,24 @@
 
                 <Button x:Name="btnSupprimer"  Click="btnSupprimer_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,0,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="75">Supprimer</Label>
-                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/delete.png" Height="25" />
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="95">Supprimer</Label>
+                        <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/delete.png" Height="25" />
                     </StackPanel>
                 </Button>
 
 
                 <Button x:Name="btnCreer"  Click="btnCreer_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="75">Créer</Label>
-                        <Image Width="75" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="95">Créer</Label>
+                        <Image Width="25" Margin="10,0,0,0" HorizontalAlignment="Center" Source="../../Images/plus.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
 
                 <Button x:Name="btnModifier"  Click="btnModifier_Click" Width="150"  Height="40" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <Label FontSize="14" HorizontalContentAlignment="Center" Width="75">Modifier</Label>
-                        <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/edit.png"  Height="25" />
+                        <Label FontFamily="Poppins" FontSize="14" HorizontalContentAlignment="Center" Width="95">Modifier</Label>
+                        <Image Width="25"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../../Images/edit.png"  Height="25" />
                     </StackPanel>
                 </Button>
 
