--- a/Windows/Mail/MailSetupWindow.xaml
+++ b/Windows/Mail/MailSetupWindow.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MailCreator.Windows.Mail" 
              xmlns:uc="clr-namespace:MailCreator.UserControls"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" 
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="800">
     <Grid Background="White">
@@ -28,7 +29,9 @@
 
         <Label Margin="20,220,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
-        <RichTextBox Margin="20,250,20,100"  x:Name="rtbMailBody"  Background="LightGray">
+        <telerik:RadRichTextBox  x:Name="radRichTextBox"  Margin="20,250,20,100"  Background="LightGray"/>
+
+        <RichTextBox Visibility="Hidden" Margin="20,250,20,100"  x:Name="rtbMailBody"  Background="LightGray">
             <FlowDocument Background="Transparent"  >
            
             </FlowDocument>
