--- a/Windows/Mail/MailUpdateWindow.xaml
+++ b/Windows/Mail/MailUpdateWindow.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MailCreator.Windows.Mail"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
@@ -37,11 +38,9 @@
 
         <Label Margin="20,170,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
 
-        <RichTextBox Margin="20,200,20,100"   x:Name="rtbMailBody"  Background="LightGray">
-            <FlowDocument Background="Transparent"  >
+        <telerik:RadRichTextBox Margin="20,200,20,100"   x:Name="rtbMailBody"  Background="LightGray"/>
 
-            </FlowDocument>
-        </RichTextBox>
+        
         <Button x:Name="btnValider" Width="40" Click="btnValider_Click" Background="Transparent" VerticalAlignment="Bottom" HorizontalAlignment="Center" Height="40" Margin="0,0,0,30">
             <StackPanel Orientation="Horizontal">
                 <Image Source="../../Images/checked.png" Width="16" Height="16" />
