--- a/Windows/HomeWindow.xaml
+++ b/Windows/HomeWindow.xaml
@@ -8,29 +8,40 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
 
-        <StackPanel  Margin="10,25,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
+
+        <StackPanel  Grid.Row="0"  Margin="10,25,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
             <Label Content="Mail Créator" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="28" FontWeight="Bold" FontFamily="Poppins"  Margin="0,0,0,0"/>
         </StackPanel>
 
 
-        <WrapPanel Orientation="Horizontal" Margin="40,90,40,20">
+        <WrapPanel Orientation="Horizontal"  Grid.Row="1" Grid.ColumnSpan="2" Margin="20,20,20,20">
 
-            <Button x:Name="btnEnsignants"  Click="btnEnsignants_Click" Width="310" Margin="20" HorizontalAlignment="Left" Height="40" Background="Transparent" >
+       
+            
+            <Button x:Name="btnEnsignants"  Click="btnEnsignants_Click" HorizontalAlignment="Center" Width="auto" Margin="20"  Height="40" Background="Transparent" >
                 <StackPanel Orientation="Horizontal">
                     <Label HorizontalContentAlignment="Center" FontSize="14" Width="220" FontFamily="Poppins">Gestion des enseignants</Label>
                     <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/teacher.png"  Height="25" />
                 </StackPanel>
             </Button>
 
-            <Button x:Name="btnSemaineAdd"  Click="btnSemaineAdd_Click" Width="310" Margin="20"   HorizontalAlignment="Right" Height="40" Background="Transparent" >
+            <Button x:Name="btnSemaineAdd"  Click="btnSemaineAdd_Click" Width="auto" Margin="20"  HorizontalAlignment="Center"  Height="40" Background="Transparent" >
                 <StackPanel Orientation="Horizontal">
                     <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Poppins" Width="220">Choisir une semaine</Label>
                     <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/excel.png"  Height="25" />
                 </StackPanel>
             </Button>
 
-            <Button x:Name="btnSemaineEdit"  Click="btnSemaineEdit_Click" Width="310" Margin="20"  Height="40" Background="Transparent">
+            <Button x:Name="btnSemaineEdit"  Click="btnSemaineEdit_Click" Width="auto" Margin="20" HorizontalAlignment="Center"   Height="40" Background="Transparent">
                 <StackPanel Orientation="Horizontal">
                     <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Poppins" x:Name="lbSemaineEdit" Width="220">Modifier la semaine</Label>
                     <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/excel.png"  Height="25" />
@@ -38,14 +49,14 @@
             </Button>
 
 
-            <Button x:Name="btnSetupMail"  Click="btnSetupMail_Click" Width="310" Margin="20"  Height="40" Background="Transparent">
+            <Button x:Name="btnSetupMail"  Click="btnSetupMail_Click" Width="auto" Margin="20" HorizontalAlignment="Center"   Height="40" Background="Transparent">
                 <StackPanel Orientation="Horizontal">
                     <Label HorizontalContentAlignment="Center" FontSize="14" Width="220" FontFamily="Poppins">Préparer le contenu du mail</Label>
                     <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/prepare.png"  Height="25" />
                 </StackPanel>
             </Button>
 
-            <Button x:Name="btnMailDraft"  Click="btnMail_Click" Width="310" Margin="20"  Height="40" Background="Transparent" >
+            <Button x:Name="btnMailDraft"  Click="btnMail_Click" Width="auto" Margin="20" HorizontalAlignment="Center"   Height="40" Background="Transparent" >
                 <StackPanel Orientation="Horizontal">
                     <Label HorizontalContentAlignment="Center" FontSize="14" FontFamily="Poppins" Width="220">Gestion des mails</Label>
                     <Image Width="75"  HorizontalAlignment="Center" Margin="10,0,0,0" Source="../Images/send.png"  Height="25" />
