--- a/Windows/Mail/MailUpdateWindow.xaml
+++ b/Windows/Mail/MailUpdateWindow.xaml
@@ -29,11 +29,9 @@
 
         <Label Margin="20,80,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez l'objet du mail</Label>
 
-        <RichTextBox Margin="20,110,20,0"  x:Name="rtbMailObjet" Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray">
-            <FlowDocument Background="Transparent">
+     
+        <telerik:RadRichTextBox  Margin="20,110,20,0"  x:Name="rtbMailObjet" Height="40" VerticalAlignment="Top" FontFamily="Poppins" Background="LightGray"/>
 
-            </FlowDocument>
-        </RichTextBox>
 
 
         <Label Margin="20,170,20,20" VerticalAlignment="Top" FontSize="14" FontFamily="Poppins" >Modifiez le mail à envoyer</Label>
